<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp">

    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lead_name_label"/>

    <EditText
        android:id="@+id/lead_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/lead_name_hint"/>

    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Phone"/>

    <EditText
        android:id="@+id/lead_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/lead_phone_hint"/>

    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Contact"/>

    <EditText
        android:id="@+id/lead_preference"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/lead_preference_hint"/>

    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        android:text="@string/lead_details_label"/>

    <Button
        android:id="@+id/lead_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        tools:text="Wed Nov 14 11:56 EST 2018"/>

    <CheckBox
        android:id="@+id/lead_contacted"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lead_contacted_label"/>

</LinearLayout>